Fix overflow input range

--- a/static/output.css
+++ b/static/output.css
@@ -184,19 +184,11 @@
   }
 }
 @layer utilities {
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip-path: inset(50%);
-    white-space: nowrap;
-    border-width: 0;
-  }
   .absolute {
     position: absolute;
+  }
+  .relative {
+    position: relative;
   }
   .static {
     position: static;
@@ -204,14 +196,8 @@
   .col-span-2 {
     grid-column: span 2 / span 2;
   }
-  .mx-1 {
-    margin-inline: calc(var(--spacing) * 1);
-  }
   .mx-auto {
     margin-inline: auto;
-  }
-  .my-2 {
-    margin-block: calc(var(--spacing) * 2);
   }
   .ms-2 {
     margin-inline-start: calc(var(--spacing) * 2);
@@ -252,9 +238,6 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
-  .h-14 {
-    height: calc(var(--spacing) * 14);
-  }
   .h-dvh {
     height: 100dvh;
   }
@@ -264,8 +247,8 @@
   .w-2\.5 {
     width: calc(var(--spacing) * 2.5);
   }
-  .w-10\/12 {
-    width: calc(10/12 * 100%);
+  .w-64 {
+    width: calc(var(--spacing) * 64);
   }
   .w-full {
     width: 100%;
@@ -309,11 +292,6 @@
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
-  .truncate {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
   .overflow-hidden {
     overflow: hidden;
   }
@@ -339,9 +317,6 @@
   }
   .bg-neutral-900 {
     background-color: var(--color-neutral-900);
-  }
-  .bg-stone-700 {
-    background-color: var(--color-stone-700);
   }
   .bg-stone-900 {
     background-color: var(--color-stone-900);
@@ -411,18 +386,13 @@
   .underline-offset-2 {
     text-underline-offset: 2px;
   }
-  .opacity-0 {
-    opacity: 0%;
+  .opacity-100 {
+    opacity: 100%;
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .peer-checked\:bg-pink-700 {
-    &:is(:where(.peer):checked ~ *) {
-      background-color: var(--color-pink-700);
-    }
   }
   .hover\:bg-neutral-900\/75 {
     &:hover {
